<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HLog</string>
    <string name="action_settings">Settings</string>
    <string name="call_ui">Callsign</string>
    <string name="start_time">Start time</string>
    <string name="start_time_ui">Start time</string>
    <string name="txfreq_ui">TX Frequency</string>
    <string name="new_ui">New</string>
    <string name="log_contact">logContact</string>
    <string name="log_ui">Log</string>
    <string name="now_ui">Now</string>
    <string name="configure_ui">Config</string>
    <string name="title_activity_config">Configure</string>
    <string name="server_ui">Cluster Server</string>
    <string name="yourcall_ui">Your Callsign</string>
    <string name="login_ui">Filter</string>
    <string name="done_ui">Done</string>
    <string name="rx_freq">RX Frequency</string>
    <string name="mode_ui">Mode</string>
    <string name="rrst_ui">R.RST</string>
    <string name="srst_ui">S.RST</string>
    <string name="title_activity_log">LogActivity</string>
    <string name="timeon_ui">Time On</string>
    <string name="timeoff_ui">Time Off</string>
    <string name="namet_ui">Name</string>
    <string name="lookup_ui">Look Up</string>
    <string name="qth_ui">QTH</string>
    <string name="state_ui">State</string>
    <string name="country_ui">Country</string>
    <string name="save_ui">Save</string>
    <string name="cancel_ui">Cancel</string>
    <string name="grid_ui">Grid</string>
    <string name="title_activity_entry">EntryActivity</string>
    <string name="capture_ui">Capture</string>
    <string name="contacts_ui">Contacts(0)</string>
    <string name="edit_ui">Edit</string>
    <string name="tools_ui">Tools</string>
    <string name="menu_delete">Delete</string>
    <string name="piglet_ui">Piglet IP</string>
    <string name="default_piglet_ip">10.1.1.1</string>
    <string name="qrzpassword_ui">QRZ XML password</string>
    <string name="shdx_ui">sh/dx</string>
    <string name="dxmessage">Message</string>
    <string name="dx_flag">DX Flag</string>
    <string name="colon">:</string>
    <string name="port_ui">Port</string>
    <string name="def_telnet_port">23</string>
    <string name="def_pig_port">7373</string>
    <string name="qrz_uname_ui">QRZ.com user name</string>
    <string name="auto_ui">Auto</string>
    <string name="title_activity_tools">ToolsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="mail_ui">Mail adif</string>
    <string name="import_ui">Import dx</string>
    <string name="hotspot_ui">Hotspot</string>
    <string name="spot_ui">Spot</string>

</resources>
