<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConfigActivity" >

    <TextView
        android:id="@+id/cluster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_ui" />

    <EditText
        android:id="@+id/cluster_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cluster"
        android:layout_below="@+id/cluster"
        android:ems="10"
        android:inputType="text|textUri" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/yourcall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cluster_edit"
        android:layout_below="@+id/cluster_edit"
        android:text="@string/yourcall_ui" />

    <EditText
        android:id="@+id/yourcall_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/yourcall"
        android:layout_alignRight="@+id/cluster_edit"
        android:layout_below="@+id/yourcall"
        android:ems="10"
        android:inputType="textCapCharacters" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/piglet_edit"
        android:layout_below="@+id/piglet_edit"
        android:onClick="done"
        android:text="@string/save_ui" />

    <EditText
        android:id="@+id/piglet_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/piglet"
        android:layout_alignRight="@+id/qrzpassword_edit"
        android:layout_below="@+id/piglet"
        android:ems="10"
        android:hint="@string/default_piglet_ip" />

    <TextView
        android:id="@+id/piglet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/qrzpassword_edit"
        android:layout_below="@+id/qrzpassword_edit"
        android:text="@string/piglet_ui" />

    <EditText
        android:id="@+id/qrzpassword_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/qrzpassword"
        android:layout_alignRight="@+id/qrz_user_edit"
        android:layout_below="@+id/qrzpassword"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/cport_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cluster_edit"
        android:layout_toRightOf="@+id/cluster_edit"
        android:ems="10"
        android:hint="@string/def_telnet_port"
        android:inputType="number"
        android:text="@string/def_telnet_port" />

    <TextView
        android:id="@+id/cport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cluster"
        android:layout_toRightOf="@+id/qrzpassword_edit"
        android:text="@string/port_ui" />

    <EditText
        android:id="@+id/pport_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/piglet_edit"
        android:layout_toRightOf="@+id/piglet_edit"
        android:ems="10"
        android:hint="@string/def_pig_port"
        android:inputType="number"
        android:text="@string/def_pig_port" />

    <TextView
        android:id="@+id/pport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pport_edit"
        android:layout_alignLeft="@+id/cport"
        android:text="@string/port_ui" />

    <TextView
        android:id="@+id/qrzpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/qrz_user_edit"
        android:layout_below="@+id/qrz_user_edit"
        android:text="@string/qrzpassword_ui" />

    <TextView
        android:id="@+id/QRZuname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/yourcall_edit"
        android:layout_below="@+id/yourcall_edit"
        android:text="@string/qrz_uname_ui" />

    <EditText
        android:id="@+id/qrz_user_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/QRZuname"
        android:layout_below="@+id/QRZuname"
        android:ems="10"
        android:inputType="textCapCharacters" />

    <CheckBox
        android:id="@+id/auto_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cport_edit"
        android:layout_alignTop="@+id/QRZuname"
        android:text="@string/auto_ui" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/done_button"
        android:layout_alignBottom="@+id/done_button"
        android:layout_toRightOf="@+id/done_button"
        android:onClick="onCancel"
        android:text="@string/cancel_ui" />

</RelativeLayout>