<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wfahle.hlog.EntryActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/capture_button"
        android:layout_alignBottom="@+id/capture_button"
        android:layout_alignParentLeft="true"
        android:text="@string/contacts_ui" />

    <Button
        android:id="@+id/capture_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@+id/contacts"
        android:onClick="onCapture"
        android:text="@string/new_ui" />

    <Button
        android:id="@+id/config_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/capture_button"
        android:layout_alignBottom="@+id/capture_button"
        android:layout_toRightOf="@+id/capture_button"
        android:text="@string/configure_ui" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/capture_button"
        android:layout_marginTop="46dp" >
    </ListView>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/config_1"
        android:layout_alignRight="@+id/listView1"
        android:text="@string/tools_ui" />

</RelativeLayout>

